bin/testsuite/tests/compiler/src/errors/compiler5083.swg
#global testerror "Err0745"
struct(T) A
{
    x:   s32
}

#test
{
    let a = #alignof(A)
}
